####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = nload
nload_SOURCES = status.cpp graph.cpp dev.cpp main.cpp proc.cpp 
nload_LDADD   = -lncurses


EXTRA_DIST = proc.cpp proc.h main.cpp main.h dev.cpp dev.h graph.cpp graph.h status.cpp status.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = nload

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
nload_LDFLAGS = $(all_libraries) 
                                                                                
