## Helder Correia <helder.correia@netcabo.pt>

bin_PROGRAMS = nload

nload_SOURCES =		\
dev.cpp dev.h		\
graph.cpp graph.h 	\
main.cpp main.h		\
traffic_window.cpp traffic_window.h \
optionbase.cpp optionbase.h \
options.cpp options.h 	\
opt_window.cpp opt_window.h \
proc.cpp proc.h		\
status.cpp status.h 	\
form_field.cpp form_field.h
