## Helder Correia <helder.correia@netcabo.pt>

bin_PROGRAMS = nload

nload_SOURCES =		\
main.cpp main.h		\
dev.cpp dev.h		\
form_field.cpp form_field.h \
graph.cpp graph.h 	\
opt_window.cpp opt_window.h \
optionbase.cpp optionbase.h \
options.cpp options.h 	\
proc.cpp proc.h		\
screen.h		\
status.cpp status.h 	\
traffic_window.cpp traffic_window.h \
window.h
