## Helder Correia <helder.correia@netcabo.pt>

bin_PROGRAMS = nload

nload_SOURCES = \
    main.cpp main.h						\
    dev.cpp dev.h						\
    form_field.cpp form_field.h         \
    graph.cpp graph.h					\
    opt_window.cpp opt_window.h         \
    proc.cpp proc.h						\
    screen.cpp screen.h					\
    setting.cpp setting.h               \
    settingstore.cpp settingstore.h     \
    status.cpp status.h					\
    stringutils.cpp stringutils.h       \
    traffic_window.cpp traffic_window.h \
    window.cpp window.h

